# intellect-cli

./: Cargo.toml  README.md
src/: crypto_currency.rs  crypto_currency_client.rs  main.rs  weather.rs
