[package]
name = "intellect-cli"
version = "0.1.0"
edition = "2021"
authors = ["Mohamed Fauzaan <mfauzaan@icloud.com>"]
description = "A CLI for the Intellect API"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "cargo"] }
colored = "2.0.0"
num-format = "0.4.4"
prettytable = "0.10.0"
reqwest = { version = "0.11.13", features = ["json", "rustls", "blocking"] }
rusty-money = "0.4.1"
serde = { version = "1.0.152", features = ["derive"] }
